force-app/main/default/objects/Background_Verification__c/Background_Verification__c.object-meta.xml
<CustomObject>
    <label>Background Verification</label>
    <nameField>
        <label>Background Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Background Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>