force-app/main/default/objects/Background_Verification__c/fields/Aadhar_Card_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhar Card Submitted</label>
    <type>Checkbox</type>
</CustomField>