force-app/main/default/objects/Background_Verification__c/fields/Assigned_Verifier__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Verifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Verifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Background_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>