force-app/main/default/objects/Background_Verification__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Background Verifications</relationshipLabel>
    <relationshipName>Background_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>