force-app/main/default/objects/Background_Verification__c/fields/Documents_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Documents_Submitted__c</fullName>
    <label>Submitted Documents</label>
    <referenceTo>Documents_Submitted__c</referenceTo>
    <relationshipLabel>Background Verifications</relationshipLabel>
    <relationshipName>Background_Verifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>