force-app/main/default/objects/Background_Verification__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Background Verifications</relationshipLabel>
    <relationshipName>Background_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>