force-app/main/default/objects/Background_Verification__c/fields/Graduation_Marksheet_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Marksheet_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graduation Marksheet Submitted</label>
    <type>Checkbox</type>
</CustomField>