force-app/main/default/objects/Background_Verification__c/fields/List_of_all_Documents__c.field-meta.xml
<CustomField>
    <fullName>List_of_all_Documents__c</fullName>
    <label>List of all Documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>