force-app/main/default/objects/Background_Verification__c/fields/Twelfth_Marksheet_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Twelfth_Marksheet_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Twelfth Marksheet Submitted</label>
    <type>Checkbox</type>
</CustomField>