force-app/main/default/objects/Background_Verification__c/fields/Verification_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Start_Date__c</fullName>
    <label>Verification Start Date</label>
    <type>Date</type>
</CustomField>